--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 config/config.js
 config/SystemConfig.js
 conf.json
-public/apidocs/json/index.json
+public/docs/json/index.json
 .idea/*
 uploads/*
 node_modules
