--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "assert-plus": "*",
         "bunyan": "*",
         "extend": "*",
+        "fastdfs-client": "^1.0.2",
         "gm": "1.22.0",
         "log4js": "3.0.2",
         "mongodb": "2.2.36",
